# resume-matcher

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Makefile  PRIVACY.md  README.md  docker-compose.yml  pyproject.toml  requirements-extra.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: Caddyfile
docs/: DEFENSE_FILE_SPEC.md  DESIGN.md  IMPLEMENTATION.md  JD_AUTOFILL.md  PHASE5.md  PLATFORM.md  RELATIONSHIPS.md  walkthrough.html
resume_matcher/: __init__.py  config.py  notify.py
scripts/: build_skills.py  create_user.py  deploy.ps1  deploy.sh  dsr_erase.py  eval_accuracy.py  eval_fairness.py  gen_synthetic.py  run_demo.py  run_retention.py  serve.py  verify_defense_file.py  verify_phase5_migration.sh
tests/: conftest.py  test_accounts.py  test_adapter_contract.py  test_adjacency_grading.py  test_api.py  test_audit.py  test_benchmark.py  test_benchmark_variance.py  test_claude_cli.py  test_compliance_pack.py  test_config.py  test_counterfactual.py  test_defense_file.py  test_demo_api.py  test_demo_async.py  test_demo_bulk.py  test_demo_export.py  test_demo_grid.py  test_demo_quota.py  test_demo_session.py  test_e2e_smoke.py  test_eval_data.py  test_fairness_gate.py  test_grid_fast_path.py  test_hidden_layer_scan.py  test_importer.py  test_injection.py  test_jd_audit.py  test_jd_fields.py  test_jd_llm_extract.py  test_jd_merge.py  test_jd_structure.py  test_job_posting.py  test_job_runner.py  test_parser_bytes.py  test_phase4_fairness.py  test_phase4_graph.py  test_phase4_intros.py  test_phase4_migration.py  test_phase4_retention.py  (+22 more)
(+107 files in other folders)
